syntax = "proto3";
import "google/protobuf/empty.proto";
package jigen;
option csharp_namespace = "Jigen.Proto";

service StoreCollectionService {
  rpc ListCollections (CollectionKey) returns (ListCollectionResult);
  rpc GetContent (ItemKey) returns (RawContentResult);
  rpc SetDocument (Document) returns (Result);
  rpc SetVector (Vector) returns (Result);
  rpc DeleteVector(ItemKey) returns(Result);
  rpc GetAllKeys(CollectionKey) returns(KeysResult);
  rpc Contains(ItemKey) returns(Result);
  rpc Clear(CollectionKey) returns(Result);
  rpc Count(CollectionKey) returns(CountResult);

  rpc CalculateEmbeddings (EmbeddingRequest) returns (EmbeddingResponse);
}

message ItemKey{
  string Database = 1;
  string Collection = 2;
  bytes Key = 3;
}

message CollectionKey{
  string Database = 1;
  string Collection = 2;
}

message KeysResult{
  repeated bytes Keys = 1;
}

message CountResult{
  int32 Count = 1;
}

message Document {
  string Database = 1;
  string Collection = 2;
  bytes Key = 3;
  bytes Content = 4;
  string Sentence = 5;
}

message Vector {
  string Database = 1;
  string Collection = 2;
  bytes Key = 3;
  bytes Content = 4;
  repeated float Embeddings = 5;
}

message Result {
  bool Success = 1;
  string Message = 2;
}

message EmbeddingRequest {
  string Message = 1;
}

message EmbeddingResponse {
  repeated float Embeddings = 1;
}

message ListCollectionResult{
  repeated string collections = 1;
}

message RawContentResult{
  bytes content = 1;
}

message JsonContentResult{
  string content = 1;
}